--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-flip-card": "^3.5.7",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.17.4",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-flip-card": "^3.5.7",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
